--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ h4 {
     text-align: center;
 }
 
+a {
+    text-decoration: none !important;
+}
+
 img {
     border-radius: 50%;
   }
@@ -32,6 +36,10 @@ img {
 
     align-items: center;
     justify-content: center;
+}
+
+.buttonWidth {
+    width: 25em;
 }
 
 .buttonCenter {
